<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".DustFragment">

    <ScrollView
        style="@android:style/Widget.Material.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:contentPadding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/titleView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:ellipsize="none"
                        android:text="@string/title_dust"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="28sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_latlng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/titleView"
                        android:layout_marginTop="5dp"
                        android:checkable="false"
                        android:checked="false"
                        android:fitsSystemWindows="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/latlng"
                        app:chipIcon="@drawable/ic_place_black_24dp"
                        app:chipIconSize="18dp" />

                    <com.ekn.gruzer.gaugelibrary.ArcGauge
                        android:id="@+id/Gauge"
                        android:layout_width="270dp"
                        android:layout_height="270dp"
                        android:layout_below="@+id/chip_latlng"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Gauge"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="-70dp"
                        android:text="@string/unit_dust"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="22sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card1"
                android:layout_marginTop="15dp"
                android:checkable="false"
                android:clickable="false"
                android:clipChildren="false"
                app:cardCornerRadius="20dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false"
                app:contentPadding="15dp"
                app:state_dragged="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/aqi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_toEndOf="@+id/aqi_icon"
                        android:text="@string/aqi"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/aqi_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/aqi"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@+id/aqi_icon"
                        android:text="@string/aqi_status"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/aqi_icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/aqi_status"
                        android:src="@drawable/ic_verygood"
                        android:tintMode="add" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>